login.php and bk.css corrections
-fix bk.css banner covering login/signup
-fix login prompt

--- a/css/bk.css
+++ b/css/bk.css
@@ -13,11 +13,13 @@ header {
 	clear: both;
 	height: 50px;
 	background: #0D1FA6;
+	font-family:arial;
 }
 #submenu {
 	clear: both;
-	height: 50px;
+	height: 80px;
 	background: #0D1FA6;
+	font-family:arial;
 }
 
 #content {
@@ -36,16 +38,19 @@ footer {
 #logo {
 	float:left;
 	height:100px;
+	margin-right:5%;
 }
 
 #banner {
 	margin:auto;
-	/*padding-top:10px;*/
+	width:30%;
 }
 
 #welcome {
-	color: green;
+	color: #f2f46d;
 	font-family: Arial;
+	position:relative;
+	padding-top:25px;
 }
 .links{
 	font-size:20px;
